# area-db

./: .gitignore  .gitmodules  Cargo.toml  README.MD
.github/workflows/: rust.yml
c_dome/: CMakeLists.txt  main.c
data/: mysql-table.sql  sqlite-table.sql
examples/axum/: Cargo.toml
examples/axum/src/: area.rs  main.rs
src/: build.rs  c_lib.rs  main.rs
src/dao/: area.rs  area_code.rs  area_geo.rs  mod.rs  utils.rs
src/dao/area_data/: csv_data.rs  mod.rs  mysql_data.rs  sqlite_data.rs  utils.rs
src/dao/area_store/: store_disk.rs  store_memory.rs
tests/: test.rs
wrappers/c_dome/: CMakeLists.txt  main.c
wrappers/php/: README.MD  area_db.api.php  area_db.c  area_db.stub.php  area_db_arginfo.h  area_db_arginfo_7.h  area_db_class.c  area_db_class.h  area_db_exception_class.c  area_db_exception_class.h  area_lib.h  build.sh  config.m4  config.w32  php_area_db.h
wrappers/php/tests/: 001.phpt  002.phpt
